# news-recommendation-service

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
app/: config.py  factory.py  run.py  schema.py
app/database/: crud.py  models.py  redis.py  sqlite.py
app/routers/: auth.py  comments.py  posts.py  users.py
app/utils/: auth.py  common.py  ml.py
tests/: conftest.py  test_comments.py  test_ml.py  test_posts.py  test_users.py  test_utils.py  utils.py
